# FHE-Sorting

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  sort.cpp  sort.h
app/: CMakeLists.txt  comparison.cpp  comparison.h  config.json  encryption.cpp  encryption.h  generated_coeffs.h  kway_adapter.h  main.cpp  rotation.h  sign.cpp  sign.h  sort.cpp  sort.h  sort_algo.cpp  sort_algo.h
app/k-way/: EvalUtils.cpp  EvalUtils.h  Masking.cpp  Masking.h  SortUtils.cpp  SortUtils.h  Sorter.h
benchmarks/: BitonicSortBenchmark.cpp  CMakeLists.txt  DirectSortBenchmark.cpp  RotationBenchmark.cpp  SincBenchmark.cpp  SortNBenchmark.cpp
comparison/: continue_experiments.sh  plot_results.py  run_experiments.sh
comparison/experimental_results/: final_summary.md  final_summary.txt
comparison/experimental_results/kway/: N125_summary.txt  N125_summary.txtsh  N128_summary.txt  N16_summary.txt  N243_summary.txt  N256_summary.txt  N25_summary.txt  N27_summary.txt  N32_summary.txt  N512_summary.txt  N625_summary.txt  N64_summary.txt  N81_summary.txt  N9_summary.txt  total_results.txt
comparison/experimental_results/kway/trials/trial_1/: output.txt  size_125.txt  size_128.txt  size_16.txt  size_243.txt  size_25.txt  size_256.txt  size_27.txt  size_32.txt  size_512.txt  size_625.txt  size_64.txt  size_81.txt  size_9.txt
comparison/experimental_results/kway_k2/: N1024_summary.txt  N128_summary.txt  N16_summary.txt  N256_summary.txt  N32_summary.txt  N4_summary.txt  N512_summary.txt  N64_summary.txt  N8_summary.txt  total_results.txt
comparison/experimental_results/kway_k2/trials/trial_1/: output.txt  size_1024.txt  size_128.txt  size_16.txt  size_256.txt  size_32.txt  size_4.txt  size_512.txt  size_64.txt  size_8.txt
comparison/experimental_results/kway_k2/trials/trial_10/: output.txt  size_1024.txt  size_128.txt  size_16.txt  size_256.txt  size_32.txt  size_4.txt  size_512.txt  size_64.txt  size_8.txt
comparison/experimental_results/kway_k2/trials/trial_2/: output.txt  size_1024.txt  size_128.txt  size_16.txt  size_256.txt  size_32.txt  size_4.txt  size_512.txt  size_64.txt  size_8.txt
comparison/experimental_results/kway_k2/trials/trial_3/: output.txt  size_1024.txt  size_128.txt  size_16.txt  size_256.txt  size_32.txt  size_4.txt  size_512.txt  size_64.txt  size_8.txt
comparison/experimental_results/kway_k2/trials/trial_4/: output.txt  size_1024.txt  size_128.txt  size_16.txt  size_256.txt  size_32.txt  size_4.txt  size_512.txt  size_64.txt  size_8.txt
comparison/experimental_results/kway_k2/trials/trial_5/: output.txt  size_1024.txt  size_128.txt  size_16.txt  size_256.txt  size_32.txt  size_4.txt  size_512.txt  size_64.txt  size_8.txt
comparison/experimental_results/kway_k2/trials/trial_6/: output.txt  size_1024.txt  size_128.txt  size_16.txt  size_256.txt  size_32.txt  size_4.txt  size_512.txt  size_64.txt  size_8.txt
comparison/experimental_results/kway_k2/trials/trial_7/: output.txt  size_1024.txt  size_128.txt  size_16.txt  size_256.txt  size_32.txt  size_4.txt  size_512.txt  size_64.txt  size_8.txt
comparison/experimental_results/kway_k2/trials/trial_8/: output.txt  size_1024.txt  size_128.txt  size_16.txt  size_256.txt  size_32.txt  size_4.txt  size_512.txt  size_64.txt  size_8.txt
comparison/experimental_results/kway_k2/trials/trial_9/: output.txt  size_1024.txt  size_128.txt  size_16.txt  size_256.txt  size_32.txt  size_4.txt  size_512.txt  size_64.txt  size_8.txt
comparison/experimental_results/kway_k3/: N243_summary.txt  N27_summary.txt  N729_summary.txt  N81_summary.txt  N9_summary.txt  total_results.txt
comparison/experimental_results/kway_k3/trials/trial_1/: output.txt  size_243.txt  size_27.txt  size_729.txt  size_81.txt  size_9.txt
comparison/experimental_results/kway_k3/trials/trial_10/: output.txt  size_243.txt  size_27.txt  size_729.txt  size_81.txt  size_9.txt
comparison/experimental_results/kway_k3/trials/trial_2/: output.txt  size_243.txt  size_27.txt  size_729.txt  size_81.txt  size_9.txt
comparison/experimental_results/kway_k3/trials/trial_3/: output.txt  size_243.txt  size_27.txt  size_729.txt  size_81.txt  size_9.txt
comparison/experimental_results/kway_k3/trials/trial_4/: output.txt  size_243.txt  size_27.txt  size_729.txt  size_81.txt  size_9.txt
comparison/experimental_results/kway_k5/: N125_summary.txt  N25_summary.txt  N625_summary.txt  total_results.txt
comparison/experimental_results/mehp24/: N1024_summary.txt  N128_summary.txt  N16_summary.txt  N256_summary.txt  N32_summary.txt  N4_summary.txt  N512_summary.txt  N64_summary.txt  N8_summary.txt  total_results.txt
comparison/experimental_results/ours/: N1024_summary.txt  N128_summary.txt  N16_summary.txt  N256_summary.txt  N32_summary.txt  N4_summary.txt  N512_summary.txt  N64_summary.txt  N8_summary.txt  total_results.txt
comparison/experimental_results/ours_hybrid/: N1024_summary.txt  N128_summary.txt  N16_summary.txt  N256_summary.txt  N32_summary.txt  N4_summary.txt  N512_summary.txt  N64_summary.txt  N8_summary.txt  total_results.txt
scripts/: bitonic_sort.py  direct_sort_rank.py
src/: CMakeLists.txt  comparison.cpp  comparison.h  config.json  encryption.cpp  kway_adapter.h  main.cpp  rotation.h  sign.cpp  sign.h  sort.h  sort_algo.h  testcase.json
src/k-way/: EvalUtils.cpp  EvalUtils.h  Masking.cpp  Sorter.cpp  Sorter.h
src/mehp24/: mehp24_sort.cpp  mehp24_sort.h  mehp24_utils.cpp  mehp24_utils.h  tmp.cpp
tests/: BitonicSortTest.cpp  CMakeLists.txt  CompareTest.cpp  DecomposeTest.cpp  DirectSortHTest.cpp  DirectSortNTest.cpp  DirectSortTest.cpp  KWaySortTest.cpp  NAFTest.cpp  RotationTest.cpp  SignTest.cpp  SincTest.cpp  SortTest.cpp  utils.h
tests/k-way/: CMakeLists.txt  EvalUtilsTest.cpp  KWaySort235Test.cpp  KWaySort2Test.cpp  KWaySort3Test.cpp  KWaySort5Test.cpp  MaskingTest.cpp  SortUtilsTest.cpp  SorterTest.cpp
tests/mehp24/: CMakeLists.txt  Mehp24SortTest.cpp
utils/: CMakeLists.txt  generate_cheb_coeffs.cpp  generate_cheb_doubled_coeffs.cpp  sign_characterizer.cpp
utils/sign_minimax/: go.mod  main.go
(+370 files in other folders)
